--- a/HW3/task_6-7/Gemfile
+++ b/HW3/task_6-7/Gemfile
@@ -2,8 +2,8 @@
 
 source "https://rubygems.org"
 
-gem 'sanitize',
-gem 'creates_html_file_test',
+gem 'sanitize', '>=6.0.0'
+gem 'creates_html_file_test', '>=0.0.3'
 
 
 
