--- a/HW5/Rails_Api/.gitignore
+++ b/HW5/Rails_Api/.gitignore
@@ -27,3 +27,7 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+.ruby-version
+Gemfile.lock
+/config/database.yml
