--- a/HW10/online_store/Gemfile
+++ b/HW10/online_store/Gemfile
@@ -29,11 +29,14 @@ gem "jbuilder"
 
 gem "activeadmin"
 
+#gem "sass-rails"
+
 gem "devise"
 
 gem "bootstrap", "~> 5.2.3"
 
 gem "pagy"
+
 
 # Use Redis adapter to run Action Cable in production
 # gem "redis", "~> 4.0"
