--- a/HW12/online_store/Gemfile
+++ b/HW12/online_store/Gemfile
@@ -78,5 +78,8 @@ group :development do
 
   # Add a comment summarizing the current schema to the top or bottom
   gem "annotate"
+
+  #The Bullet gem is designed to help you increase your application's performance by reducing the number of queries it makes
+  gem 'bullet'
 end
 
