--- a/HW13/online_store/Gemfile
+++ b/HW13/online_store/Gemfile
@@ -63,7 +63,8 @@ group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
   gem "debug", platforms: %i[ mri mingw x64_mingw ]
 
-  
+  #Preview email in the default browser instead of sending it.
+  gem "letter_opener", group: :development
 end
 
 group :development do
