--- a/HW15/online_store/Gemfile
+++ b/HW15/online_store/Gemfile
@@ -29,7 +29,7 @@ gem "jbuilder"
 
 gem "activeadmin"
 
-#gem "sass-rails"
+gem "sass-rails"
 
 gem "devise"
 
@@ -58,7 +58,7 @@ gem "tzinfo-data", platforms: %i[ mingw mswin x64_mingw jruby ]
 gem "bootsnap", require: false
 
 # Use Sass to process CSS
-gem "sassc-rails"
+#gem "sassc-rails"
 
 # Use Active Storage variants [https://guides.rubyonrails.org/active_storage_overview.html#transforming-images]
 gem "image_processing", "~> 1.2"
