--- a/HW13/online_store/Gemfile
+++ b/HW13/online_store/Gemfile
@@ -37,6 +37,8 @@ gem "bootstrap", "~> 5.2.3"
 
 gem "pagy"
 
+gem "net-http"
+
 
 # Use Redis adapter to run Action Cable in production
 # gem "redis", "~> 4.0"
