--- a/HW15/online_store/Gemfile
+++ b/HW15/online_store/Gemfile
@@ -41,9 +41,11 @@ gem "sidekiq"
 
 gem "sidekiq-scheduler"
 
+gem "redis-rails"
+
 
 # Use Redis adapter to run Action Cable in production
-gem "redis", "~> 4.0"
+#gem "redis", "~> 4.0"
 
 # Use Kredis to get higher-level data types in Redis [https://github.com/rails/kredis]
 # gem "kredis"
@@ -68,7 +70,13 @@ group :development, :test do
   gem "debug", platforms: %i[ mri mingw x64_mingw ]
 
   #Preview email in the default browser instead of sending it.
-  #gem "letter_opener", group: :development
+  gem "letter_opener", group: :development
+
+  #The Bullet gem is designed to help you increase your application's performance by reducing the number of queries it makes
+  gem 'bullet'
+
+  # Add a comment summarizing the current schema to the top or bottom
+  gem "annotate"
 end
 
 group :development do
@@ -81,13 +89,5 @@ group :development do
   # Speed up commands on slow machines / big apps [https://github.com/rails/spring]
   # gem "spring"
 
-  # Add a comment summarizing the current schema to the top or bottom
-  gem "annotate"
-
-  #The Bullet gem is designed to help you increase your application's performance by reducing the number of queries it makes
-  gem 'bullet'
-
-  #Preview email in the default browser instead of sending it.
-  gem "letter_opener", group: :development
 end
 
